--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-uq2ORZwTb5iq0PkdDhNdoePw4ydmGC3zHqz7tNl8sZsVs3uAm1UVi5Ji5Tm/Y+GZ9nOq6j1MlVpWPyCea1lXlg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Link to Montserrat font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+
+  <!-- Link to Georgia font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Georgia&display=swap">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
